--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,12 @@ dependencies:
   firebase_storage: ^11.1.0
   firebase_core: ^2.9.0
   firebase_auth: ^4.4.1
-
+  email_auth: ^1.0.0
+  firebase_database: ^10.1.0
+  flutter_email_sender: ^5.2.0
+  mailer: ^6.0.0
+  provider: ^6.0.5
+  url_launcher: ^6.1.10
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
